logs/microblog.log
2025-07-23 16:11:50,088 ERROR: Exception on /index [GET] [in /home/oslab/microblog/venv/lib/python3.12/site-packages/flask/app.py:875]
Traceback (most recent call last):
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask_login/utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/app/routes.py", line 50, in index
    return render_template('index.html', title='Home', form=form,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/flask/templating.py", line 131, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/jinja2/environment.py", line 1295, in render
    self.environment.handle_exception()
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/oslab/microblog/app/templates/index.html", line 2, in top-level template code
    {% import "bootstrap_wtf.html" as wtf %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/app/templates/base.html", line 94, in top-level template code
    {% block content %}{% endblock %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/app/templates/index.html", line 10, in block 'content'
    {% include '_post.html' %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/oslab/microblog/venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/oslab/microblog/app/templates/_post.html", line 9, in template
    <!--这个技巧的核心是【分层处理】。它使用 {% set %} 指令，
    ^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: Expected an expression, got 'end of statement block'
2025-07-23 16:12:56,314 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:28:27,052 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:30:08,021 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:30:51,852 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:31:51,797 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:33:04,967 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:40:43,735 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:54:00,000 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 16:54:10,790 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 17:00:16,354 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
2025-07-23 17:00:40,635 INFO: Microblog startup [in /home/oslab/microblog/app/__init__.py:58]
